src/test/deca/context/valid/Objet/protected_field.deca
// Description:
//    test du type "protected" pour un attribut d'une classe
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
}

class B {
    protected A a ;
}

